GNOME Bugzilla – Bug 761013
Cannot bookmark symlinks
Last modified: 2018-05-02 16:54:53 UTC
From either Nautilus or from a file picker, I can drag a folder to the bookmarks area and have it stick, but if I try this with a folder that is a symlink it mysteriously just vanishes immediately. This used to work. In fact I currently have bookmarks that are symlinks from last term, and I can still click on them, so the bug is just at creation time. Is there a way to turn on debugging output from Nautilus? Version info: [kousu@galleon A1]$ pacman -Qi nautilus Name : nautilus Version : 3.18.4-2 Description : GNOME file manager Architecture : x86_64 URL : http://www.gnome.org Licenses : GPL Groups : gnome Provides : None Depends On : libexif gnome-desktop exempi gvfs desktop-file-utils dconf libtracker-sparql nautilus-sendto libnautilus-extension Optional Deps : None Required By : nautilus-open-terminal nautilus-share Optional For : gnome-shell-extensions Conflicts With : None Replaces : None Installed Size : 12.14 MiB Packager : Jan de Groot <jgc@archlinux.org> Build Date : Wed 13 Jan 2016 09:12:14 AM EST Install Date : Sun 17 Jan 2016 04:46:35 PM EST Install Reason : Explicitly installed Install Script : Yes Validated By : Signature
I think this should be more or less easier to fix, ->gnome-love
Created attachment 321753 [details] [review] gtkplacessidebar: change bookmark condition to allow symlinks Due to not following links on file information querying, links to directories are not considered valid bookmark targets. In order to change this, allow symlink following to test if the target is a directory.
Review of attachment 321753 [details] [review]: Thanks for the patch! I would say it looks good, but let's move this to gtk+ for be reviewed by some gtk+ maintainer.
*** Bug 785539 has been marked as a duplicate of this bug. ***
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gtk/issues/595.