PlacesSidebar: Allow bookmarking symbolic links

Due to not following links on file information querying, links to directories
are not considered valid bookmark targets. In order to change this, allow
symlink following to test if the target is a directory.

https://bugzilla.gnome.org/show_bug.cgi?id=761013

close https://gitlab.gnome.org/GNOME/gtk/issues/595